[package]
name = "protonup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
flate2 = "1.0"
futures-util = "0.3"
hex = "0.4"
hex-literal = "0.3"
indicatif = { version = "0.17", features = [
    "improved_unicode",
    "unicode-segmentation",
] }
inquire = "0.3.0"
octocrab = "0.17"
reqwest = { version = "0.11", features = [
    "hyper-rustls",
    "stream",
    "tokio-rustls",
    "serde_json",
    "json",
    "blocking",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
structopt = "0.3"
tar = "0.4"
tokio = { version = "1.20", features = ["full"] }
