[package]
name = "libprotonup-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
hex = "0.4"
libfuzzer-sys = "0.4"
sha2 = "0.10"
tokio = { version = "1.46", features = ["rt-multi-thread"] }

[dependencies.libprotonup]
path = "../libprotonup"

# Use independent workspace for fuzzers
[workspace]
members = ["."]

[[bin]]
name = "sources"
path = "fuzz_targets/sources.rs"
test = false
doc = false
bench = false

[[bin]]
name = "expand_tilde"
path = "fuzz_targets/expand_tilde.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hashing"
path = "fuzz_targets/hashing.rs"
test = false
doc = false
bench = false
