[package]
name = "libprotonup"
version = "0.8.6"
edition = "2021"
authors = ["Auyer <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/protonup-rs"
license = "Apache-2.0"
readme = "../README.md"

description = "Library for Custom Proton Download and installation"

[dependencies]
arcstr = "1.2"
anyhow = "1.0"
dirs = "6.0"
futures-util = "0.3"
hex = "0.4"
hex-literal = "1.0"
pin-project = "1.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "stream",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
structopt = "0.3"
tokio = { version = "1.44", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = "0.7"
# decompression
tokio-tar = "0.3"
async-compression = { version = "0.4", features = ['gzip', 'xz', 'tokio'] }

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt"] }
