[package]
name = "libprotonup"
version = "0.9.1"
edition = "2024"
authors = ["Auyer <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/protonup-rs"
license = "Apache-2.0"
readme = "../docs/docs.md"

description = "Library for Custom Proton Download and installation"

[dependencies]
arcstr = "1.2"
anyhow = "1.0"
dirs = "6.0"
futures-util = "0.3"
hex = "0.4"
hex-literal = "1.0"
pin-project = "1.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "stream",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.46", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = "0.7"
ron = "0.10"
lazy_static = "1.5.0"
# decompression
astral-tokio-tar = "0.5.6"
async-compression = { version = "0.4", features = ['gzip', 'xz', 'zstd', 'tokio'] }
tempfile = "3.20"
regex = "1.11"

[dev-dependencies]
tar = "0.4"
tokio = { version = "1.46", features = ["macros", "rt"] }
