[package]
name = "protonup-gui"
version = "0.0.1"
edition = "2021"
authors = ["Auyer <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/protonup-rs"
license = "Apache-2.0"

[dependencies]
iced = { version = "0.9", features = ["tokio"] }
iced_native = { version = "0.10" }
iced_futures = { version = "0.6", features = ["tokio"] }
libprotonup = { path = "../libprotonup" }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]
