[package]
name = "protonup-rs"
version = "0.9.2"
edition = "2024"
authors = ["Auyer <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/protonup-rs"
license = "Apache-2.0"
readme = "../README.md"

description = "TUI Program for Custom Proton Download and installation written in rust"

[package.metadata.deb]
maintainer = "Auyer <auyer@rcpassos.me>"
copyright = "2024, Auyer <auyer@rcpassos.me>"
extended-description = "TUI Program used to download, install and manage custom Proton/Wine distributions for Steam and Lutris."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/protonup-rs", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/protonup-rs/README", "644"],
]

[dependencies]

anyhow = "1.0"
arcstr = "1.2"
futures-util = "0.3"
libprotonup = { path = "../libprotonup", version = "0.9.2" }
inquire = { version = "0.9", default-features = false, features = ["termion"] }
indicatif = { version = "0.18", features = [
  "improved_unicode",
  "unicode-segmentation",
  "tokio",
] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
