[package]
name = "protonup-rs"
version = "1.0.0-rc0"
edition = "2024"
authors = ["Auyer <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/protonup-rs"
license = "GPL-3.0"
readme = "../README.md"

description = "A Rust TUI app to automate the installation and update of Linux Gaming Compatibility tools, like ProtonGE, Luxtorpeda, Boxtron and others"

[package.metadata.deb]
maintainer = "Auyer <auyer@rcpassos.me>"
copyright = "2024, Auyer <auyer@rcpassos.me>"
extended-description = "A Rust TUI app to automate the installation and update of Linux Gaming Compatibility tools, like ProtonGE, Luxtorpeda, Boxtron and others"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/protonup-rs", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/protonup-rs/README", "644"],
]

[dependencies]

anyhow = "1.0"
arcstr = "1.2"
futures-util = "0.3"
libprotonup = { path = "../libprotonup", version = "1.0.0-rc0" }
inquire = { version = "0.9", default-features = false, features = ["termion"] }
indicatif = { version = "0.18", features = [
  "improved_unicode",
  "unicode-segmentation",
  "tokio",
] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.6", features = ["derive"] }
