[package]
name = "protonup-rs"
version = "0.13.0"
edition = "2024"
authors = ["Rafael Passos <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/protonup-rs"
license = "GPL-3.0"
readme = "man/protonup-rs.1.md"

description = "A Rust app to automate the installation and update of Linux Gaming Compatibility tools, like ProtonGE, Luxtorpeda, Boxtron and others."

include = ["/src", "../LICENSE", "man/", "completions/"]

[package.metadata.deb]
maintainer = "Rafael Passos <auyer@rcpassos.me>"
copyright = "Rafael Passos <auyer@rcpassos.me>"
extended-description = "A Rust app to automate the installation and update of Linux Gaming Compatibility tools, like ProtonGE, Luxtorpeda, Boxtron and others."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/protonup-rs", "usr/bin/", "755"],
    ["man/protonup-rs.1", "usr/share/doc/protonup-rs/protonup-rs.1", "644"],
    ["completions/protonup-rs.bash", "usr/share/bash-completion/completions/protonup-rs", "644"],
    ["completions/_protonup-rs", "usr/share/zsh/vendor-completions/_protonup-rs", "644"],
    ["completions/protonup-rs.fish", "usr/share/fish/vendor_completions.d/protonup-rs.fish", "644"],
]

[dependencies]

anyhow = "1.0"
arcstr = "1.2"
futures-util = "0.3"
libprotonup = { path = "../libprotonup", version = "0.13.0" }
inquire = { version = "0.9", default-features = false, features = ["termion"] }
indicatif = { version = "0.18", features = [
  "improved_unicode",
  "unicode-segmentation",
  "tokio",
] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.6", features = ["derive"] }

[build-dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"

[dev-dependencies]
serde_json = "1.0"
