[package]
name = "protonup-rsui"
version = "0.0.1"
edition = "2021"
authors = ["Auyer <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/protonup-rs"
license = "Apache-2.0"

[dependencies]
iced = { version = "0.14", features = ["tokio", "sipper", "image", "canvas", "advanced"] }
iced_futures = { version = "0.14", features = ["tokio"] }
libprotonup = { path = "../libprotonup", version = "0.11.0" }
lyon_algorithms = "1.0"
rfd = "0.17"

tokio = { version = "1.50", features = ["sync"] }
futures-util = "0.3"
anyhow = "1.0"

[dev-dependencies]
iced_test = "0.14"
