[package]
name = "protonup-rsui"
version = "1.0.0"
edition = "2021"
authors = ["Auyer <auyer@rcpassos.me>"]
repository = "https://github.com/auyer/protonup-rs"
license = "Apache-2.0"

[dependencies]
iced = { version = "0.14", features = ["tokio", "sipper", "image", "canvas", "advanced"] }
iced_futures = { version = "0.14", features = ["tokio"] }
libprotonup = { path = "../libprotonup", version = "1.0.0" }
lyon_algorithms = "1.0"
rfd = "0.17"

tokio = { version = "1.50", features = ["sync"] }
futures-util = "0.3"
anyhow = "1.0"

[dev-dependencies]
iced_test = "0.14"
