[package]
name = "protonup-tui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libprotonup = { path = "../libprotonup" }
inquire = "0.5"
indicatif = { version = "0.17", features = [
  "improved_unicode",
  "unicode-segmentation",
] }
structopt = "0.3"
tokio = { version = "1.21", features = [
  "macros",
  "rt-multi-thread",
] }
